Added final touches

--- a/Web.config
+++ b/Web.config
@@ -13,7 +13,7 @@
   </connectionStrings>
 
   <system.web>
-    <customErrors mode="RemoteOnly" defaultRedirect="~/Error_Pages/Internal.aspx">
+    <customErrors mode="On" defaultRedirect="~/Error_Pages/Internal.aspx">
       <error statusCode="404" redirect="~/Error_Pages/Oops.aspx" />
       <error statusCode="500" redirect="~/Error_Pages/Internal.aspx" />
     </customErrors>
@@ -113,4 +113,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="ai.summarize@gmail.com">
+        <network defaultCredentials="true" host="smtp.gmail.com" port="587" enableSsl="true" userName="ai.summarize@gmail.com" password="aisummarize123">
+      </network></smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
